<resources>
    <string name="app_name">vpet_tam</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="letter">letter</string>
    <string name="heart">heart</string>
    <string name="play">play button</string>
    <string name="select_pet">Select pet</string>
    <string name="title_choose">Choose pet</string>
    <string name="title_start">Start a game</string>
    <string name="p_name">NAME</string>
    <string name="p_age">DAY</string>
    <string name="sp_food">FEED</string>
    <string name="food_desc">food</string>
    <string name="feed_btn">FEED</string>
    <string name="cure_desc">cure</string>
    <string name="cure_btn">CURE</string>
    <string name="sleep_desc">sleep</string>
    <string name="sleep_btn">SLEEP</string>
    <string name="menu_text">MENU</string>
    <string name="menu_change_name">CHANGE NAME</string>
    <string name="menu_turn_event">ON/OFF\t RANDOM EVENTS</string>
    <string name="menu_free_pet">FREE YOUR PET</string>
    <string name="ok_event">OK</string>
    <string name="ok_btn_txt">OK</string>
    <string name="title_settings">Settings</string>
</resources>