<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_start">

    <fragment
        android:id="@+id/navigation_start"
        android:name="com.example.vpet_tam.view.StartFragment"
        android:label="@string/title_start"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_navigation_start_to_navigation_choose"
            app:destination="@id/navigation_choose" />
        <action
            android:id="@+id/action_navigation_start_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_choose"
        android:name="com.example.vpet_tam.view.ChooseFragment"
        android:label="@string/title_choose"
        tools:layout="@layout/fragment_choose" >
        <action
            android:id="@+id/action_navigation_choose_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.vpet_tam.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_start"
            app:destination="@id/navigation_start" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.vpet_tam.view.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_settings_to_navigation_start"
            app:destination="@id/navigation_start" />
    </fragment>


</navigation>