<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/__png_kittl"
    tools:context=".ui.settings.SettingsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="409dp"
        android:layout_height="179dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/menu_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/img_group_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/menu_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/press_start_2p"
            android:text="@string/menu_text"
            android:textAppearance="@style/main_sent"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="@+id/menu_head"
            app:layout_constraintTop_toTopOf="@+id/menu_head" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="408dp"
        android:layout_height="319dp"
        android:layout_marginTop="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_change_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="32dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/img_group_8_pink_100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/press_start_2p"
            android:text="@string/menu_change_name"
            android:textAppearance="@style/main_sent"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/btn_change_name"
            app:layout_constraintTop_toTopOf="@+id/btn_change_name" />

        <ImageButton
            android:id="@+id/btn_turn_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="232dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/img_group_8_pink_100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_turn"
            android:layout_width="263dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/press_start_2p"
            android:text="@string/menu_turn_event"
            android:textAlignment="center"
            android:textAppearance="@style/main_sent"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/btn_turn_event"
            app:layout_constraintTop_toTopOf="@+id/btn_turn_event" />

        <ImageButton
            android:id="@+id/btn_free_pet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="132dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/img_group_8_pink_100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_free_pet"
            android:layout_width="264dp"
            android:layout_height="36dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/press_start_2p"
            android:text="@string/menu_free_pet"
            android:textAlignment="center"
            android:textAppearance="@style/main_sent"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/btn_free_pet"
            app:layout_constraintTop_toTopOf="@+id/btn_free_pet" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="230dp"
        android:layout_marginTop="500dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="40dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/img_quit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="42dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>