<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/__png_kittl"
    tools:context=".ui.startwindow.StartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/HeartLayout_top"
        android:layout_width="410dp"
        android:layout_height="140dp"
        android:layout_marginTop="0dp">

        <ImageView
            android:id="@+id/heart1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/heart" />

        <ImageView
            android:id="@+id/heart2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/heart" />

        <ImageView
            android:id="@+id/heart3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/heart" />

        <ImageView
            android:id="@+id/heart4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/heart" />

        <ImageView
            android:id="@+id/heart5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/heart" />

        <ImageView
            android:id="@+id/heart6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="350dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/heart" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/MainLayout"
        android:layout_width="410dp"
        android:layout_height="230dp"
        android:layout_marginTop="200dp">

        <ImageView
            android:id="@+id/letter_t"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_t"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_a"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_a"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="50dp"
            android:layout_marginTop="@dimen/letter_top"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_m"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_m"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="90dp"
            android:layout_marginTop="@dimen/letter_top"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_a1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_a"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="130dp"
            android:layout_marginTop="@dimen/letter_top"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_g"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_g"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="170dp"
            android:layout_marginTop="@dimen/letter_top"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_o"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_o"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="210dp"
            android:layout_marginTop="@dimen/letter_top"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_t1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_t"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="250dp"
            android:layout_marginTop="@dimen/letter_top"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_c"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_c"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="290dp"
            android:layout_marginTop="@dimen/letter_top"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_h"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_h"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="330dp"
            android:layout_marginTop="@dimen/letter_top"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_i"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_i"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="360dp"
            android:layout_marginTop="@dimen/letter_top"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/dash"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_i_red_100"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="250dp"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_m1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_m"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="300dp"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_y"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_y"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="340dp"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_v"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_v"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="130dp"
            android:layout_marginTop="@dimen/virtual"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_i1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_i"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="160dp"
            android:layout_marginTop="@dimen/virtual"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_r"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_r"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="190dp"
            android:layout_marginTop="@dimen/virtual"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_t2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_t"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="230dp"
            android:layout_marginTop="@dimen/virtual"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_u"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_u"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="270dp"
            android:layout_marginTop="@dimen/virtual"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_a2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_a"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="310dp"
            android:layout_marginTop="@dimen/virtual"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_l"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_l"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="350dp"
            android:layout_marginTop="@dimen/virtual"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_p"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_p"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="250dp"
            android:layout_marginTop="190dp"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_e"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_e"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="290dp"
            android:layout_marginTop="190dp"
            android:contentDescription="@string/letter" />

        <ImageView
            android:id="@+id/letter_t3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_t"
            android:layout_width="@dimen/letter"
            android:layout_height="@dimen/letter"
            android:layout_marginStart="330dp"
            android:layout_marginTop="190dp"
            android:contentDescription="@string/letter" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/PlayLayout"
        android:layout_width="410dp"
        android:layout_height="150dp"
        android:layout_marginTop="430dp">

        <ImageButton
            android:id="@+id/play_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"

            android:contentDescription="@string/play" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/HeartLayout_bottom"
        android:layout_width="410dp"
        android:layout_height="140dp"
        android:layout_marginTop="590dp">

        <ImageView
            android:id="@+id/heart7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/heart" />

        <ImageView
            android:id="@+id/heart8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/heart" />

        <ImageView
            android:id="@+id/heart9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/heart" />

        <ImageView
            android:id="@+id/heart10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/heart" />

        <ImageView
            android:id="@+id/heart11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/heart" />

        <ImageView
            android:id="@+id/heart12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="350dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/heart" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>